--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
   <title>React App</title>
+  <style>
+    .nopadding {
+      padding: 0px !important
+    }
+  </style>
 </head>
 
 <body>
