--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,13 @@
       opacity: 0;
     }
 
+    /* #postform {
+      height: 100%;
+      display: flex !important;
+      justify-content: center;
+      align-items: center;
+    } */
+
     ::-webkit-scrollbar {
       width: 6px;
       height: 6px;
@@ -36,6 +43,7 @@
 
     ::-webkit-scrollbar-track {
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
       border-radius: 10px;
     }
 
@@ -51,6 +59,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
