--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,10 @@
     crossorigin="anonymous">
   <title>React App</title>
   <style>
+    body {
+      padding: 0px !important;
+    }
+
     .nopadding {
       padding: 0px !important
     }
