--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
       padding: 0px !important
     }
 
-    .modal:before {
+    .loginboard:before {
       content: '';
       display: inline-block;
       height: 20%;
