--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,6 +37,16 @@
       border-radius: 10px;
     }
 
+    .modal-open {
+      overflow: visible !important;
+    }
+
+    .modal-backdrop {
+      position: static !important;
+      width: 0;
+      height: 0;
+    }
+
     ::-webkit-scrollbar-thumb {
       border-radius: 10px;
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
