--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
   <style>
     body {
       padding: 0px !important;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
     }
 
     .nopadding {
